frontend/tests/errors/ER-016/local_external_requires_double_bang/test.vx
// @rfc: docs/vexel-rfc.md#declarations
// @desc: Local external declarations must use `!!`; single-bang `!` is top-level-only. | Local `!name:#T;` is rejected

&^main() -> #i32 {
    !port:#u8;
    0
}
